Basic Header and basic sessions.

--- a/index.html
+++ b/index.html
@@ -10,14 +10,28 @@
 <body>
   <header>
     <nav>
-      MENU
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Portfolio</a></li>
+        <li><a href="#">Contacto</a></li>
+      </ul>
     </nav>
   </header>
   <section>
-    Section
+    <h2>Home</h2>
+  </section>
+  <section>
+    <h2>Blog</h2>
+  </section>
+  <section>
+    <h2>Portfolio</h2>
+  </section>
+  <section>
+    <h2>Contacto</h2>
   </section>
   <footer>
-    Footer
+    2023
   </footer>
 </body>
 </html>
