--- a/index.html
+++ b/index.html
@@ -14,22 +14,50 @@
         <li><a href="#">Home</a></li>
         <li><a href="#">Blog</a></li>
         <li><a href="#">Portfolio</a></li>
+        <li><a href="#">CV</a></li>
         <li><a href="#">Contacto</a></li>
       </ul>
     </nav>
   </header>
-  <section>
-    <h2>Home</h2>
-  </section>
-  <section>
-    <h2>Blog</h2>
-  </section>
-  <section>
-    <h2>Portfolio</h2>
-  </section>
-  <section>
-    <h2>Contacto</h2>
-  </section>
+  <main>
+    <section>
+      <h2>Home</h2>
+      <article>
+        <h3>Jorge E Gomez</h3>
+        <h4>Desarrollador Drupal Frontend</h4>
+        <small>HTML, CSS, JS, Git, Drupal</small>
+      </article>
+    </section>
+    <section>
+      <h2>Blog</h2>
+    </section>
+    <section>
+      <h2>Portfolio</h2>
+      <article>
+        ADA
+      </article>
+      <article>
+        UNPAZ
+      </article>
+      <article>
+        DPTS
+      </article>
+      <article>
+        Seminario Jur
+      </article>
+    </section>
+    <section>
+      <h2>Contacto</h2>
+      <article>
+        <nav>
+          <ul>
+            <li><a href="https://www.linkedin.com/in/jorgeeduardogomez/">Linkedin</a></li>
+            <li><a href="mailto:jeg1986@gmail.com.ar">Manda un correo!</a></li>
+          </ul>
+        </nav>
+      </article>
+    </section>
+  </main>
   <footer>
     2023
   </footer>
