--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <nav>
+    <nav class="nav-main">
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#">Blog</a></li>
