--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
       <article>
         <nav>
           <ul>
+            <li><a href="#">Twitter</a></li>
             <li><a href="https://www.linkedin.com/in/jorgeeduardogomez/">Linkedin</a></li>
-            <li><a href="mailto:jeg1986@gmail.com.ar">Manda un correo!</a></li>
+            <li><a href="mailto:jeg1986@gmail.com.ar">E-mail</a></li>
           </ul>
         </nav>
       </article>
